# framework-control-tauri

./: .gitignore  package-lock.json  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  routes.rs  state.rs  types.rs
